Understanding of for of and for in loop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello Nick</h1>
     <script>
-        console.log("hello Nick");
+        console.log('hello NIck');
     </script>
 </body>
 </html>
