--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Nick</h1>
-    <script>
-        console.log('hello NIck');
-    </script>
+    <div>
+        <h1 class="counter">1000</h1>
+        <h1 class="follower">Follower</h1>  
+        <script src="./counter.js" ></script>
+    </div>
+
 </body>
 </html>
